--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/fielderror.css" type="text/css">
+    <script src="/countdown.js"></script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        countDownTimer('lefttime', /*[[${product.endTime}]]*/);
+        /*]]>*/
+    </script>
 </head>
 <body>
 <div th:text="'제목:'+${product.title}"></div>
+<div th:text="'현재가:'+${product.currentPrice}"></div>
+<div id = "lefttime"></div>
+<form th:action="'/product/'+${product.id}+'/bid'" method="post">
+    <input type="text" name="cost">
+    <input type="submit" value="입찰하기">
+</form>
+<div class="fieldError" th:if="${lowerprice}" th:text="${lowerprice}"></div>
 <div th:text="'내용:'+${product.productInformation}"></div>
 <img th:src="'/img/'+${product.getProductPhoto()}">
 </body>
