--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-lg navbar-light shadow">
   <div class="container d-flex justify-content-between align-items-center">
 
-    <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
+    <a class="navbar-brand text-success logo h1 align-self-center" href="/productlist">
       Every Auction
     </a>
 
@@ -36,7 +36,7 @@
       <div class="flex-fill">
         <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="/productlist">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -65,9 +65,8 @@
           <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
           <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
         </a>
-        <a class="nav-icon position-relative text-decoration-none" href="#">
+        <a class="nav-icon position-relative text-decoration-none" href="/myinfo">
           <i class="fa fa-fw fa-user text-dark mr-3"></i>
-          <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
         </a>
       </div>
     </div>
