--- a/src/main/resources/templates/bidComplete.html
+++ b/src/main/resources/templates/bidComplete.html
@@ -52,7 +52,7 @@
 <div class="modal-content rounded-6 shadow" style="width: 100%; height: 100%">
 
     <div class="modal-header border-bottom-0">
-        <h5 class="modal-title">채팅 기록</h5>
+        <h5 class="modal-title">판매 기록</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="x()"></button>
     </div>
     <table border="1">
