--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,9 +19,9 @@
 
 </head>
 
-<body>
+<body class="bg-light">
 <!-- Header -->
-      <nav class="navbar navbar-expand-lg navbar-light shadow">
+      <nav class="bg-white navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
           <a class="navbar-brand text-success logo h1 align-self-center" href="/productlist">
