--- a/src/main/resources/templates/product_single.html
+++ b/src/main/resources/templates/product_single.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="/css/slick-theme.css">
 
 
-    <script src="/countdown.js"></script>
+    <script src="/js/countdown.js"></script>
     <script th:inline="javascript">
         /*<![CDATA[*/
         countDownTimer('lefttime', /*[[${product.endTime}]]*/);
@@ -31,7 +31,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script src="/modal.js"></script>
-    <script src="/replyTime.js"></script>
+    <script src="/js/replyTime.js"></script>
 
     <script th:inline="javascript">
         /*<![CDATA[*/
